--- a/lib/templates/erb/scaffold/_form.html.erb.tt
+++ b/lib/templates/erb/scaffold/_form.html.erb.tt
@@ -1,4 +1,4 @@
-<%%= form_with(model: <%= model_resource_name %>) do |form| %>
+<%%= form_with(model: <%= singular_table_name %>) do |form| %>
   <%%= render "shared/error_messages", resource: form.object %>
 
 <% attributes.each do |attribute| -%>
