--- a/lib/templates/erb/scaffold/_form.html.erb
+++ b/lib/templates/erb/scaffold/_form.html.erb
@@ -10,22 +10,22 @@
 
   <div class="form-group">
     <%%= form.label :password_confirmation %>
-    <%%= form.password_field :password_confirmation, class: "form-control" %>
+    <%%= form.password_field :password_confirmation, class: "border" %>
 <% elsif attribute.attachments? -%>
     <%%= form.label :<%= attribute.column_name %> %>
-    <%%= form.<%= attribute.field_type %> :<%= attribute.column_name %>, multiple: true, class: "form-control" %>
+    <%%= form.<%= attribute.field_type %> :<%= attribute.column_name %>, multiple: true, class: "border" %>
 <% elsif attribute.rich_text? -%>
     <%%= form.label :<%= attribute.column_name %> %>
     <%%= form.<%= attribute.field_type %> :<%= attribute.column_name %>, data: { controller: "mentions", mentions_target: "field" } %>
 <% elsif attribute.field_type == :date_select -%>
     <%%= form.label :<%= attribute.column_name %> %>
-    <%%= form.text_field :<%= attribute.column_name %>, class: "form-control", data: { controller: :flatpickr, flatpickr_alt_input: true, flatpickr_alt_format: t("date.formats.long") } %>
+    <%%= form.text_field :<%= attribute.column_name %>, class: "border", data: { controller: :flatpickr, flatpickr_alt_input: true, flatpickr_alt_format: t("date.formats.long") } %>
 <% elsif attribute.field_type == :datetime_select -%>
     <%%= form.label :<%= attribute.column_name %> %>
-    <%%= form.text_field :<%= attribute.column_name %>, class: "form-control", data: { controller: :flatpickr, flatpickr_enable_time: true, flatpickr_alt_input: true, flatpickr_alt_format: t("time.formats.long") } %>
+    <%%= form.text_field :<%= attribute.column_name %>, class: "border", data: { controller: :flatpickr, flatpickr_enable_time: true, flatpickr_alt_input: true, flatpickr_alt_format: t("time.formats.long") } %>
 <% elsif attribute.column_name.ends_with?("_id") %>
     <%%= form.label :<%= attribute.column_name %> %>
-    <%%= form.select :<%= attribute.column_name %>, options_for_select(<%=attribute.column_name[..-4].classify %>.map{|e| [e.id,e.short_name]}, class: "form-control" %>
+    <%%= form.select :<%= attribute.column_name %>, options_for_select(<%=attribute.column_name[..-4].classify %>.all.map{|e| [e.short_name,e.id]}), class: "form-control" %>
 <% else -%>
     <%%= form.label :<%= attribute.column_name %> %>
     <%%= form.<%= attribute.field_type %> :<%= attribute.column_name %>, class: "form-control" %>
@@ -34,7 +34,7 @@
 
 <% end -%>
   <div class="form-group flex justify-between">
-    <%%= form.button class: "btn btn-primary" %>
+    <%%= form.button class: "btn btn-default" %>
 
     <%% if form.object.persisted? %>
       <%%= link_to 'Delete', form.object, class: "btn btn-danger outline", method: :delete, data: { confirm: "Are you sure?" } %>
