--- a/lib/templates/erb/scaffold/show.html.erb
+++ b/lib/templates/erb/scaffold/show.html.erb
@@ -15,3 +15,7 @@
     </div>
   </div>
 </div>
+<%% <%=singular_table_name.classify %>.reflect_on_all_associations(:has_many).each do |a| %>
+  <%%= a.try(:plural_name) %>
+  <%%= (@<%= singular_table_name %>.send a.try(:plural_name).to_sym).map{|e| e.short_name} %>
+<%% end %>
