--- a/lib/templates/erb/scaffold/index.html.erb
+++ b/lib/templates/erb/scaffold/index.html.erb
@@ -1,6 +1,5 @@
 <% name_attribute = attributes.find{ |a| a.name == "name" } %>
 <% has_name = !!name_attribute %>
-
 <div class="flex flex-wrap items-center justify-between">
   <div class="w-full lg:w-1/2">
     <h1 class="text-2xl"><%= plural_table_name.capitalize %></h1>
@@ -8,7 +7,7 @@
 
   <div class="w-full lg:w-1/2 lg:text-right">
     <%%= link_to new_<%= singular_table_name %>_path, class: 'btn btn-default' do %>
-    Add New <%= human_name %>
+      Add New <%= human_name %>
     <%% end %>
   </div>
 </div>
@@ -17,11 +16,11 @@
   <thead>
     <tr>
       <% if has_name %>
-        <th>Name</th>
+        <th class="border-2">Name</th>
       <% end %>
 
       <% attributes.without(name_attribute).each do |attribute| -%>
-        <th><%= attribute.human_name %></th>
+        <th class="border-2"><%= attribute.human_name %></th>
       <% end -%>
       <% unless has_name %>
         <th></th>
@@ -31,19 +30,27 @@
 
   <tbody>
     <%% @<%= plural_table_name%>.each do |<%= singular_table_name %>| %>
-    <%%= content_tag :tr, id: dom_id(<%= singular_table_name %>), class: dom_class(<%= singular_table_name %>) do %>
-    <% if has_name %>
-      <td><%%= link_to <%= singular_table_name %>.name, <%= singular_table_name %> %></td>
-    <% end %>
+      <%%= content_tag :tr, id: dom_id(<%= singular_table_name %>), class: dom_class(<%= singular_table_name %>) do %>
+        <% if has_name %>
+          <td class="border-2"><%%= link_to <%= singular_table_name %>.name, <%= singular_table_name %>, class: "btn btn-link" %></td>
+        <% end %>
 
-    <% attributes.without(name_attribute).each do |attribute| -%>
-      <td><%%= <%= singular_table_name %>.<%= attribute.name %> %></td>
-    <% end -%>
+        <% attributes.without(name_attribute).each do |attribute| -%>
+          <td class="border-2">
+            <%% if <%= singular_table_name.classify %>.reflect_on_all_associations(:belongs_to).map{|e| e.name}.include?(:<%= attribute.name %>) %>
+            <%%= link_to <%= singular_table_name %>.try(:<%= attribute.name %>).short_name, <%= singular_table_name %>.try(:<%= attribute.name %>),class: "btn btn-link"  %>
+            <%% else %>
+            <%%= <%= singular_table_name %>.<%= attribute.name %> %>
+            <%% end %>
+          </td>
+        <% end -%>
 
-    <% unless has_name %>
-      <td><%%= link_to 'Show', <%= singular_table_name %> %></td>
-    <% end %>
-    <%% end %>
-    <%% end %>
-  </tbody>
-</table>
+        <% unless has_name %>
+          <td><%%= link_to 'Show', <%= singular_table_name %> %></td>
+        <% end %>
+        <%% end %>
+        <%% end %>
+      </tbody>
+    </table>
+
+
