--- a/lib/templates/erb/scaffold/show.html.erb
+++ b/lib/templates/erb/scaffold/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container mx-auto my-8 px-4">
-  <div class="max-w-3xl mx-auto">
+  <div class="max-w-6xl mx-auto">
     <div class="flex justify-between items-center mb-4">
-      <h1 class="h3"><%%= link_to '<%= plural_table_name.titleize %>', <%= index_helper %>_path %> > <%= singular_table_name.titleize %> #<%%= @<%= singular_table_name %>.id %></h1>
+      <h1 class="h3"><%%= link_to '<%= plural_table_name.titleize %>', <%= index_helper %>_path, class: "btn btn-link font-bold" %> > <%= singular_table_name.titleize %> #<%%= @<%= singular_table_name %>.short_name %></h1>
       <%%= link_to 'Edit', edit_<%= singular_table_name %>_path(@<%= singular_table_name %>), class: "btn btn-link" %>
     </div>
 
@@ -9,13 +9,27 @@
       <% attributes.reject(&:password_digest?).each do |attribute| -%>
       <div class="mb-4">
         <h5><%= attribute.human_name %></h5>
-        <%%= @<%= singular_table_name %>.<%= attribute.name %> %>
+         <%% if <%= singular_table_name.classify %>.reflect_on_all_associations(:belongs_to).map{|e| e.name}.include?(:<%= attribute.name %>) %>
+          <%%= link_to @<%= singular_table_name %>.try(:<%= attribute.name %>).short_name, @<%= singular_table_name %>.try(:<%= attribute.name %>),class: "btn btn-link"  %>
+        <%% else %>
+          <%%= @<%= singular_table_name %>.<%= attribute.name %> %>
+        <%% end %>
+
       </div>
       <% end -%>
     </div>
   </div>
 </div>
+<div class="container mx-auto px-4">
 <%% <%=singular_table_name.classify %>.reflect_on_all_associations(:has_many).each do |a| %>
-  <%%= a.try(:plural_name) %>
-  <%%= (@<%= singular_table_name %>.send a.try(:plural_name).to_sym).map{|e| e.short_name} %>
-<%% end %>
+  <div class="border-2 rounded-md max-w-6xl mx-auto">
+    <%%= link_to a.try(:plural_name).capitalize, ("/" + a.try(:plural_name)), class: "btn btn-link font-bold"%>
+    <%% (@<%= singular_table_name %>.send a.try(:plural_name).to_sym).each do |a_instance| %>
+      <div class='border-2'>
+        <%%= link_to a_instance.short_name, a_instance, class: "btn btn-link" %>
+      </div>
+    <%% end %>
+  </div>
+  <%% end %>
+</div>
+
